# monitor

./: .gitignore  pyproject.toml
monitor/: monitor.ipynb
monitor/connector/: connector.py  utils.py
monitor/connector/binance/: binance_base.py  binance_perp.py  binance_spot.py
monitor/connector/bitget/: bitget_base.py  bitget_perp.py  bitget_spot.py
monitor/connector/bybit/: bybit_base.py  bybit_perp.py  bybit_spot.py
monitor/connector/coinbase/: coinbase_base.py  coinbase_perp.py  coinbase_spot.py
monitor/connector/gateio/: gateio_base.py  gateio_perp.py  gateio_spot.py
monitor/connector/kukoin/: kukoin_base.py  kukoin_perp.py  kukoin_spot.py
monitor/connector/mexc/: mexc_base.py  mexc_perp.py  mexc_spot.py
monitor/connector/okx/: okx_base.py  okx_perp.py  okx_spot.py
