[project]
name = "monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "inevity",email = "mb.tsuranov@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
